- Folia Fix & Support - Add API Functions & Add Hello World Example - Fix duplication glitches regarding bot inventory - Only 1 player can access the bot GUI (and/or inventory) at a time - Optimize pathfinding in multiple bot instances - Added bot grouping using --group flag and /fpp group - Initial /fpp storage fix attempt - Sleep command implement and patch - Create FPP Addon plugin for extra bot features - Move ping command to FPP Addon - Move Sprint + Jump to FPP Addon -  Initial Automation Settings addition in FPP Addon plugin - Added farming function for FPP Addon - Added WorldEdit based mining/placing selection for bots - Fixed /fpp move command selector, also added coordinate movement